--- a/styles.css
+++ b/styles.css
@@ -1,128 +1,78 @@
-
-*, * ::before, ::after{
-   box-sizing:border-box;
-   font-family: 'Open Sans Condensed', sans-serif;
-   font-size:normal ;
-}
-
-body{
+*{
+    box-sizing: border-box;
+    margin:0 auto;
     padding:0;
-    margin:0;
-    background:#fff;
+    user-select: none;
+    background:#000;
+    
+}
+body{
+    font-family:Helvetica, sans-serif;
+    margin:0 auto;
 }
 
-button{
-    font-weight: bold;
+
+/*------Major Container Divs------*/
+
+.calculator{
+    background:#000;
+    border-radius:50px;
+    color:#fff;
+    height:1218px;
+    padding:20px;
+    width:563px;
 }
 
-
-.calc-descriptions{
+.top-container{
     display:flex;
-    justify-content:center;
-    margin:0px 0px;
-    position:static;
-    background:rgb(82, 82, 91, 0.9);
+    height:250px;
+    justify-content: space-between;
+    padding:0 20px;
+}
+.value{
+    font-size:100px;
+    height:160px; 
+    margin-bottom:20px;
+    margin-right:20px;
+    text-align:right;
 }
 
-.two-way-power{
-    margin:20px 0px 0px 200px;
-    
+/*------Button Styles------*/
+
+.buttons-container{
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 1fr);
 }
 
-.power{
-    background-color:rgba(46,6,6,255);
-    border: 2px solid rgb(100, 100, 100);
-    color:rgba(46,6,6,255);
-    padding:10px 10px;
-    cursor:no-drop;
+.button{
+    align-items:center;
+    background: #333;
+    border-radius:50%;
+    cursor:pointer;
+    font-size:45px;
+    display:flex;
+    height:110px;
+    justify-content: center;
+    width:110px;
+}
+.button:active,
+.button:focus{
+    filter:brightness(120%)
 }
 
-.calc-grid{
-    display:grid;
-    justify-content:center;
-    align-content:center;
-    max-height:100vh;
-    margin-top:0px;
-    grid-template-columns:repeat(4, 100px);
-    grid-template-rows: minmax(120px,auto )repeat(5, 100px);
+.button.function{
+    color:black;
+    background:#a5a5a5;
 }
-
-
-/*------ Button Styles ------*/
-.calc-grid > button {
-  font-size: 2rem;
-  border-radius:8px;
-  height:100px;
-  cursor:pointer;
-  border:4px solid #000;
-  outline:none;
-  background-color:rgba(255,255,255, 0.75);  
+.button.operator{
+    background:#f1a33c;
 }
-.calc-grid > button:hover{
-    background-color: rgba(0, 0, 0, 0.3);
-    
+.button.number-0{
+    border-radius:55px;
+    grid-column:1/ span 2;
+    justify-content: flex-start;
+    padding-left:45px; 
+    width:250px;
 }
-.calc-grid > button:focus{
-    transform:scale(0.9)
-}
-
-.calc-grid .allclear{
-    background-color:rgb(29, 78, 216);
-}
-.calc-grid .allclear:hover{
-    background-color:rgb(29, 78, 216,0.9);
-}
-
-.calc-grid .sign{
-    background-color:rgb(255, 107, 0)
-}
-.calc-grid .sign:hover{
-   background-color:rgb(255, 107, 0, 0.9) 
-}
-
-.calc-grid .delete-btn{
-    background-color:rgb(255, 0, 0)
-}
-.calc-grid .delete-btn:hover{
-    background-color:rgb(255, 0, 0,0.9)
-}
-
-.calc-grid .equals-btn{
-    background-color:rgb(45, 192, 21) ;
-}
-.calc-grid .equals-btn:hover{
-    background-color:rgb(45, 192, 21,0.9) ;
-}
-
-
-/*------ Grid Arrangement and Layout Styles ------*/
-.span-two{
-    grid-column:span 2;
-}
-
-.output{
-   grid-column:1/-1; 
-   color:#000;
-   display:flex;
-   align-items:flex-end;
-   justify-content: space-around;
-   flex-direction:column;
-   padding:10px;
-   word-wrap: break-word;
-   word-break:break-all;
-   padding-top:0px;
-}
-
-
-.output .previous-operand{
-    font-size:1rem;
-    font-weight: bolder;
-}
-
-.output .current-operand{
-    font-size:2.5rem;
-    font-weight: bold;
-}
-
-
-/* ------MEDIA QUERIES ------*/
